# VideaTitles

./: .env  Cargo.toml  README.md  blacklist.txt  docker-compose.yml  videablacklist.txt
migrations/2022-08-09-114920_start_movie/: up.sql
src/: config.rs  main.rs  schema.rs
