[package]
name = "videatitles"
version = "2022.5.17"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"]}
regex = "1"
clap = "3"
crossterm = "0.23"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
